added encoded contact to mlp   * next up: add encoded month

--- a/src/distributions.ipynb
+++ b/src/distributions.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -480,13 +480,7 @@
       "no         1251\n",
       "yes         230\n",
       "unknown      34\n",
-      "Name: loan, dtype: int64\n",
-      "       loan_no  loan_yes\n",
-      "24108        1         0\n",
-      "24264        1         0\n",
-      "24279        1         0\n",
-      "24397        1         0\n",
-      "24482        1         0\n"
+      "Name: loan, dtype: int64\n"
      ]
     }
    ],
@@ -502,6 +496,40 @@
     "_loan = oneHot(_loan, 'loan')\n",
     "_loan = _loan.drop('loan_unknown',axis=1)\n",
     "# print(_loan.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cellular     1402\n",
+      "telephone     113\n",
+      "Name: contact, dtype: int64\n",
+      "       contact_cellular  contact_telephone\n",
+      "24108                 0                  1\n",
+      "24264                 1                  0\n",
+      "24279                 1                  0\n",
+      "24397                 1                  0\n",
+      "24482                 1                  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLP ENCODED CONTACT\n",
+    "\n",
+    "# scrub first time calls\n",
+    "_contact = removeFirstCalls(df)\n",
+    "\n",
+    "# 1 hot encoding\n",
+    "_contact = _contact.contact\n",
+    "print(_contact.value_counts())\n",
+    "_contact = oneHot(_contact, 'contact')\n",
+    "# print(_contact.head())"
    ]
   }
  ],
