added encoded month as one hot   * next up: ad encoded day of week as one hot

--- a/src/distributions.ipynb
+++ b/src/distributions.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -509,13 +509,7 @@
      "text": [
       "cellular     1402\n",
       "telephone     113\n",
-      "Name: contact, dtype: int64\n",
-      "       contact_cellular  contact_telephone\n",
-      "24108                 0                  1\n",
-      "24264                 1                  0\n",
-      "24279                 1                  0\n",
-      "24397                 1                  0\n",
-      "24482                 1                  0\n"
+      "Name: contact, dtype: int64\n"
      ]
     }
    ],
@@ -530,6 +524,55 @@
     "print(_contact.value_counts())\n",
     "_contact = oneHot(_contact, 'contact')\n",
     "# print(_contact.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "may    248\n",
+      "aug    236\n",
+      "nov    190\n",
+      "sep    161\n",
+      "oct    157\n",
+      "jun    154\n",
+      "jul    118\n",
+      "apr    115\n",
+      "mar     90\n",
+      "dec     46\n",
+      "Name: month, dtype: int64\n",
+      "       contact_apr  contact_aug  contact_dec  contact_jul  contact_jun  \\\n",
+      "24108            0            0            0            0            0   \n",
+      "24264            0            0            0            0            0   \n",
+      "24279            0            0            0            0            0   \n",
+      "24397            0            0            0            0            0   \n",
+      "24482            0            0            0            0            0   \n",
+      "\n",
+      "       contact_mar  contact_may  contact_nov  contact_oct  contact_sep  \n",
+      "24108            0            0            1            0            0  \n",
+      "24264            0            0            1            0            0  \n",
+      "24279            0            0            1            0            0  \n",
+      "24397            0            0            1            0            0  \n",
+      "24482            0            0            1            0            0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLP ENCODED MONTH\n",
+    "\n",
+    "# scrub first time calls\n",
+    "_month = removeFirstCalls(df)\n",
+    "\n",
+    "# 1 hot encoding\n",
+    "_month = _month.month\n",
+    "print(_month.value_counts())\n",
+    "_month = oneHot(_month, 'contact')\n",
+    "# print(_month.head())"
    ]
   }
  ],
