--- a/src/distributions.ipynb
+++ b/src/distributions.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -545,20 +545,7 @@
       "apr    115\n",
       "mar     90\n",
       "dec     46\n",
-      "Name: month, dtype: int64\n",
-      "       contact_apr  contact_aug  contact_dec  contact_jul  contact_jun  \\\n",
-      "24108            0            0            0            0            0   \n",
-      "24264            0            0            0            0            0   \n",
-      "24279            0            0            0            0            0   \n",
-      "24397            0            0            0            0            0   \n",
-      "24482            0            0            0            0            0   \n",
-      "\n",
-      "       contact_mar  contact_may  contact_nov  contact_oct  contact_sep  \n",
-      "24108            0            0            1            0            0  \n",
-      "24264            0            0            1            0            0  \n",
-      "24279            0            0            1            0            0  \n",
-      "24397            0            0            1            0            0  \n",
-      "24482            0            0            1            0            0  \n"
+      "Name: month, dtype: int64\n"
      ]
     }
    ],
@@ -571,8 +558,39 @@
     "# 1 hot encoding\n",
     "_month = _month.month\n",
     "print(_month.value_counts())\n",
-    "_month = oneHot(_month, 'contact')\n",
+    "_month = oneHot(_month, 'month')\n",
     "# print(_month.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "thu    343\n",
+      "tue    320\n",
+      "mon    310\n",
+      "wed    296\n",
+      "fri    246\n",
+      "Name: day_of_week, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLP ENCODED DAY OF WEEK\n",
+    "\n",
+    "# scrub first time calls\n",
+    "_day_of_week = removeFirstCalls(df)\n",
+    "\n",
+    "# 1 hot encoding\n",
+    "_day_of_week = _day_of_week.day_of_week\n",
+    "print(_day_of_week.value_counts())\n",
+    "_day_of_week = oneHot(_day_of_week, 'day_of_week')\n",
+    "# print(_day_of_week.head())"
    ]
   }
  ],
