added previous outcome as one hot   * combine and test

--- a/src/distributions.ipynb
+++ b/src/distributions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 708,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 712,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,6 @@
     "    # selection list for readability\n",
     "    selection = [\n",
     "        'age',\n",
-    "        'duration',\n",
     "        'campaign',\n",
     "        'pdays',\n",
     "        'previous',\n",
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 714,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 715,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,55 +185,44 @@
     "df = pd.read_csv(file_name, sep=';')\n",
     "df = df.drop_duplicates(keep='first')\n",
     "TTT_seed = randint(0,99)\n",
-    "MLP_seed = randint(0,99)"
+    "MLP_seed = randint(0,99)\n",
+    "_ready = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# COLUMN LABELS\n",
-    "# for column in df.columns: print(column)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TTT seed value: 4\n",
-      "training set size: 1212\n",
-      "testing set size: 303\n",
-      "MLP seed value: 42\n",
-      "Training accuracy: 0.73\n",
-      "Testing accuracy: 0.74\n"
+      "Index(['age', 'campaign', 'pdays', 'previous', 'emp.var.rate',\n",
+      "       'cons.price.idx', 'cons.conf.idx', 'euribor3m', 'nr.employed', 'y'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
-    "# MLP \n",
-    "#   NO FIRST CALL SUBS\n",
-    "#   NORMALIZED \n",
+    "# MLP NORMALIZED DATAFRAME \n",
     "\n",
     "# remove first call subs\n",
-    "_df = removeFirstCalls(df)\n",
+    "_normalized = removeFirstCalls(df)\n",
     "\n",
     "# normalize\n",
-    "_df = normalizedDf(_df)\n",
+    "_normalized = normalizedDf(_normalized)\n",
     "\n",
-    "# mlp wrapper\n",
-    "mlpWrapper(_df)"
+    "# add to ready\n",
+    "_ready['normalized'] = _normalized\n",
+    "\n",
+    "# output\n",
+    "print(_normalized.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 717,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [
     {
@@ -318,23 +306,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 719,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "admin.           469\n",
+      "technician       235\n",
+      "retired          175\n",
+      "student          140\n",
+      "blue-collar      129\n",
+      "management       107\n",
+      "services          76\n",
+      "unemployed        65\n",
+      "housemaid         41\n",
+      "self-employed     32\n",
+      "entrepreneur      26\n",
+      "unknown           20\n",
+      "Name: job, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# MLP  ENCODED JOB\n",
+    "# MLP ENCODED JOB\n",
     "\n",
     "# scrub first time calls\n",
     "_jobs = removeFirstCalls(df)\n",
     "\n",
     "# 1 hot encoding\n",
     "_jobs = _jobs['job']\n",
-    "_jobs = oneHot(_jobs, 'job')"
+    "print(_jobs.value_counts())\n",
+    "_jobs = oneHot(_jobs, 'job')\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['job'] = _jobs\n",
+    "\n",
+    "# output\n",
+    "# print(_jobs.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 720,
    "metadata": {},
    "outputs": [
     {
@@ -360,12 +375,17 @@
     "print(_marital.value_counts())\n",
     "_marital = oneHot(_marital, 'marital')\n",
     "_marital = _marital.drop('marital_unknown',axis=1)\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['marital'] = _marital\n",
+    "\n",
+    "# output\n",
     "# print(_marital.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [
     {
@@ -406,12 +426,17 @@
     "print(_education.education.value_counts())\n",
     "_education = _education.replace(_encoded_education)\n",
     "_education = _education.education\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['education'] = _education\n",
+    "\n",
+    "# output\n",
     "# print(_education.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 722,
    "metadata": {},
    "outputs": [
     {
@@ -435,12 +460,17 @@
     "print(_default.value_counts())\n",
     "_default = oneHot(_default, 'default')\n",
     "_default = _default.drop('default_unknown',axis=1)\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['default'] = _default\n",
+    "\n",
+    "# output\n",
     "# print(_default.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 723,
    "metadata": {},
    "outputs": [
     {
@@ -465,12 +495,17 @@
     "print(_housing.value_counts())\n",
     "_housing = oneHot(_housing, 'housing')\n",
     "_housing = _housing.drop('housing_unknown',axis=1)\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['housing'] = _housing\n",
+    "\n",
+    "# output\n",
     "# print(_housing.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 724,
    "metadata": {},
    "outputs": [
     {
@@ -495,12 +530,17 @@
     "print(_loan.value_counts())\n",
     "_loan = oneHot(_loan, 'loan')\n",
     "_loan = _loan.drop('loan_unknown',axis=1)\n",
+    "\n",
+    "# add to ready \n",
+    "_ready['loan'] = _loan\n",
+    "\n",
+    "# output\n",
     "# print(_loan.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [
     {
@@ -523,12 +563,17 @@
     "_contact = _contact.contact\n",
     "print(_contact.value_counts())\n",
     "_contact = oneHot(_contact, 'contact')\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['contact'] = _contact\n",
+    "\n",
+    "# output\n",
     "# print(_contact.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 726,
    "metadata": {},
    "outputs": [
     {
@@ -559,12 +604,17 @@
     "_month = _month.month\n",
     "print(_month.value_counts())\n",
     "_month = oneHot(_month, 'month')\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['month'] = _month\n",
+    "\n",
+    "# output\n",
     "# print(_month.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 727,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +640,111 @@
     "_day_of_week = _day_of_week.day_of_week\n",
     "print(_day_of_week.value_counts())\n",
     "_day_of_week = oneHot(_day_of_week, 'day_of_week')\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['day_of_week'] = _day_of_week\n",
+    "\n",
+    "# output\n",
     "# print(_day_of_week.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 728,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "success    1373\n",
+      "failure     142\n",
+      "Name: poutcome, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MLP ENCODED PREVIOUS OUTCOME\n",
+    "\n",
+    "# scrub first time calls\n",
+    "_poutcome = removeFirstCalls(df)\n",
+    "\n",
+    "# 1 hot encoding\n",
+    "_poutcome = _poutcome.poutcome\n",
+    "print(_poutcome.value_counts())\n",
+    "_poutcome = oneHot(_poutcome, 'poutcome')\n",
+    "\n",
+    "# add to ready\n",
+    "_ready['poutcome'] = _poutcome\n",
+    "\n",
+    "# output\n",
+    "# print(_poutcome.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 729,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NORMALIZED NUMERICAL DATA ONLY (NO FIRST CALLS):\n",
+      "TTT seed value: 73\n",
+      "training set size: 1212\n",
+      "testing set size: 303\n",
+      "MLP seed value: 86\n",
+      "Training accuracy: 0.68\n",
+      "Testing accuracy: 0.68\n",
+      "\n",
+      "adding job...\n",
+      "adding marital...\n",
+      "adding education...\n",
+      "adding default...\n",
+      "adding housing...\n",
+      "adding loan...\n",
+      "adding contact...\n",
+      "adding month...\n",
+      "adding day_of_week...\n",
+      "adding poutcome...\n",
+      "\n",
+      "ALL DATA ONLY (NO FIRST CALLS):\n",
+      "TTT seed value: 73\n",
+      "training set size: 1212\n",
+      "testing set size: 303\n",
+      "MLP seed value: 86\n",
+      "Training accuracy: 0.70\n",
+      "Testing accuracy: 0.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "# COMBINE AND TEST\n",
+    "\n",
+    "# just numeric\n",
+    "print('NORMALIZED NUMERICAL DATA ONLY (NO FIRST CALLS):')\n",
+    "mlpWrapper(_normalized)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add encoded data\n",
+    "_all_data = _normalized\n",
+    "for _key in _ready:\n",
+    "    if _key != 'normalized':\n",
+    "        print('adding {}...'.format(_key))\n",
+    "        _all_data = insert(_all_data, _ready[_key])\n",
+    "print()\n",
+    "\n",
+    "# all data\n",
+    "print('ALL DATA ONLY (NO FIRST CALLS):')\n",
+    "mlpWrapper(_all_data)"
    ]
   }
  ],
